--- a/games.html
+++ b/games.html
@@ -1,87 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MoodPlay 🎮</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="min-h-screen bg-gradient-to-br from-blue-100 via-purple-100 to-pink-100 text-gray-800 flex flex-col font-[Inter]">
+
+<body
+  class="min-h-screen bg-gradient-to-br from-blue-400 via-purple-400 to-pink-400 font-[Inter] text-gray-800 flex flex-col">
 
   <!-- Header -->
-  <header class="flex items-center justify-between p-4 bg-white/40 backdrop-blur-md sticky top-0 z-10 shadow-sm">
-    <div class="flex items-center space-x-2">
-      <button onclick="history.back()" class="p-2 rounded-full bg-white/70 hover:bg-white transition">
+  <header class="p-4 bg-white/30 backdrop-blur-md shadow-md sticky top-0 z-10 flex items-center justify-between">
+    <div class="flex items-center space-x-3">
+      <button onclick="history.back()"
+        class="p-2 rounded-full bg-white/60 hover:bg-white transition text-gray-700 shadow">
         ⬅
       </button>
-      <h1 class="text-xl font-semibold tracking-wide">MoodPlay 🎮</h1>
+      <h1 class="text-2xl font-semibold tracking-wide">MoodPlay 🎮</h1>
     </div>
-    <div class="w-3 h-3 rounded-full animate-pulse bg-purple-400 shadow-inner"></div>
   </header>
 
   <!-- Intro -->
   <section class="text-center mt-6 px-4">
-    <h2 class="text-2xl font-semibold mb-2">Pick a Game to Match Your Mood 🎯</h2>
-    <p class="text-gray-600 mb-6">Relax, focus, or just have fun — choose what feels right today.</p>
+    <h2 class="text-xl font-semibold mb-1">Pick a Game to Match Your Mood 🎯</h2>
+    <p class="text-gray-700 text-sm mb-6">Relax, focus, or just have fun — choose what feels right today.</p>
   </section>
 
   <!-- Games Grid -->
-  <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 px-5 pb-10 flex-grow">
+  <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 px-5 pb-12 flex-grow">
+
+    <!-- GAME CARD TEMPLATE -->
 
     <!-- Image Puzzle -->
-    <div class="bg-white/60 backdrop-blur-sm rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition-transform duration-300">
+    <div
+      class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
       <div class="text-5xl mb-3">🧩</div>
-      <h3 class="text-lg font-bold mb-1">Image Puzzle</h3>
-      <p class="text-sm text-gray-600 mb-3">Rearrange the pieces to complete calming visuals.</p>
-      <button onclick="location.href='puzzle.html'" class="px-5 py-2 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition">Play</button>
+      <h3 class="text-base font-bold mb-1">Image Puzzle</h3>
+      <p class="text-xs text-gray-600 mb-3">Rearrange the pieces to complete calming visuals.</p>
+      <button onclick="location.href='puzzle.html'"
+        class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
+        Play
+      </button>
     </div>
 
     <!-- Mind Maze -->
-    <div class="bg-white/60 backdrop-blur-sm rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition-transform duration-300">
+    <div
+      class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
       <div class="text-5xl mb-3">🧠</div>
-      <h3 class="text-lg font-bold mb-1">Mind Maze</h3>
-      <p class="text-sm text-gray-600 mb-3">Guide your way through glowing paths of calm focus.</p>
-      <button onclick="location.href='mindMaze.html'" class="px-5 py-2 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition">Play</button>
+      <h3 class="text-base font-bold mb-1">Mind Maze</h3>
+      <p class="text-xs text-gray-600 mb-3">Guide your way through glowing paths of calm focus.</p>
+      <button onclick="location.href='mindMaze.html'"
+        class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
+        Play
+      </button>
     </div>
 
-    <!-- Drawing Game -->
-    <div class="bg-white/60 backdrop-blur-sm rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition-transform duration-300">
+    <!-- Zen Drawing Pad -->
+    <div
+      class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
       <div class="text-5xl mb-3">🎨</div>
-      <h3 class="text-lg font-bold mb-1">Zen Drawing Pad</h3>
-      <p class="text-sm text-gray-600 mb-3">Express yourself freely on a flowing, meditative canvas.</p>
-      <button onclick="location.href='Drawing.html'" class="px-5 py-2 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition">Play</button>
+      <h3 class="text-base font-bold mb-1">Zen Drawing Pad</h3>
+      <p class="text-xs text-gray-600 mb-3">Express yourself freely on a flowing, meditative canvas.</p>
+      <button onclick="location.href='Drawing.html'"
+        class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
+        Play
+      </button>
     </div>
 
-    <!-- New Game 1 -->
-    <div class="bg-white/60 backdrop-blur-sm rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition-transform duration-300">
+    <!-- Bubble Pop -->
+    <div
+      class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
       <div class="text-5xl mb-3">🫧</div>
-      <h3 class="text-lg font-bold mb-1">Bubble Pop Calm</h3>
-      <p class="text-sm text-gray-600 mb-3">Pop gentle floating bubbles to unwind and refocus.</p>
-      <button onclick="location.href='bubble-pop.html'" class="px-5 py-2 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition">Play</button>
+      <h3 class="text-base font-bold mb-1">Bubble Pop Calm</h3>
+      <p class="text-xs text-gray-600 mb-3">Pop gentle floating bubbles to unwind and refocus.</p>
+      <button onclick="location.href='bubble-pop.html'"
+        class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
+        Play
+      </button>
     </div>
 
-    <!-- New Game 2 -->
-    <div class="bg-white/60 backdrop-blur-sm rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition-transform duration-300">
+    <!-- Hue Flow -->
+    <div
+      class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
       <div class="text-5xl mb-3">🌈</div>
-      <h3 class="text-lg font-bold mb-1">Hue Flow</h3>
-      <p class="text-sm text-gray-600 mb-3">Follow shifting colors to train focus and awareness.</p>
-      <button onclick="location.href='hue-flow.html'" class="px-5 py-2 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition">Play</button>
+      <h3 class="text-base font-bold mb-1">Hue Flow</h3>
+      <p class="text-xs text-gray-600 mb-3">Follow shifting colors to train focus and awareness.</p>
+      <button onclick="location.href='hue-flow.html'"
+        class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
+        Play
+      </button>
     </div>
 
-    <!-- New Game 3 -->
-    <div class="bg-white/60 backdrop-blur-sm rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition-transform duration-300">
+    <!-- Calm Grove -->
+    <div
+      class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
       <div class="text-5xl mb-3">🌿</div>
-      <h3 class="text-lg font-bold mb-1">Calm Grove</h3>
-      <p class="text-sm text-gray-600 mb-3">Grow virtual trees that respond to your calm clicks.</p>
-      <button onclick="location.href='calm-grove.html'" class="px-5 py-2 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition">Play</button>
+      <h3 class="text-base font-bold mb-1">Calm Grove</h3>
+      <p class="text-xs text-gray-600 mb-3">Grow virtual trees that respond to your calm clicks.</p>
+      <button onclick="location.href='calm-grove.html'"
+        class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
+        Play
+      </button>
     </div>
 
   </main>
 
   <!-- Footer -->
-  <footer class="text-center py-5 text-sm text-gray-500">
+  <footer class="text-center py-6 text-xs text-gray-600">
     🌙 More relaxing experiences coming soon...
   </footer>
 
 </body>
+
 </html>
