--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
 <body class="min-h-screen overflow-hidden">
 
+  <!-- Floating Games Icon -->
+  <div id="games-floating-btn"
+    class="fixed bottom-20 right-6 p-3 bg-white rounded-full shadow-xl cursor-pointer transition-all hover:scale-110 z-20">
+    <i class="fas fa-gamepad text-3xl"></i>
+  </div>
+
+
   <section id="welcome-section" class="relative w-full h-screen overflow-hidden">
 
     <!-- BACKGROUND SHAPES (bottom layer) -->
@@ -101,7 +108,7 @@
     </div>
   </div>
   <!-- Result Section -->
-  <div id="result-section" class="hidden relative" >
+  <div id="result-section" class="hidden relative">
 
     <h2 id="result-text" class="text-2xl md:text-3xl font-semibold mb-4 leading-snug"></h2>
 
@@ -113,18 +120,39 @@
       class="px-6 py-3 text-lg md:text-xl rounded-xl bg-indigo-600 text-white cursor-pointer transition duration-300 hover:bg-indigo-700">
       Try Again
     </button>
-
   </div>
-  <!-- Result Section -->
-  <!-- <div id="result-section" -->
-  <!-- style="display:none; flex-direction: column; align-items:center; justify-content:center; height:100vh; text-align:center; padding:20px;"> -->
-  <!-- <h2 id="result-text" style="font-size:1.8rem; margin-bottom:20px; line-height:1.4;"></h2> -->
-  <!-- <p id="suggestion-text" class="mt-3 text-lg text-gray-700 italic text-center"></p> -->
-  <!-- <div id="result-emoji" style="font-size:6rem; margin-bottom:20px;"></div> -->
-  <!-- <button id="try-again-btn" -->
-  <!-- style="padding:10px 25px; font-size:1.2rem; border:none; border-radius:8px; background:#4f46e5; color:#fff; cursor:pointer; transition:0.3s;">Try -->
-  <!-- Again</button> -->
-  <!-- </div> -->
+
+  <!-- Chat Icon -->
+  <div id="chat-icon"
+    class="hidden fixed bottom-4 right-6 cursor-pointer bg-indigo-600 text-white p-4 rounded-full shadow-lg z-40">
+    <i class="fas fa-comment-dots text-xl"></i>
+  </div>
+
+  <!-- Chat Section -->
+  <section id="chat-section" class="hidden fixed inset-0 z-30 flex flex-col">
+    <!-- Header -->
+    <div class="flex justify-between items-center bg-indigo-600 text-white px-4 py-3 shadow-md">
+      <button id="chat-back-btn" class="text-white text-xl"><i class="fas fa-arrow-left"></i></button>
+      <h2 class="text-lg font-semibold">MoodBot</h2>
+      <button id="chat-home-btn" class="text-white text-xl"><i class="fas fa-home"></i></button>
+    </div>
+
+    <!-- Messages Container -->
+    <div id="chat-messages" class="flex-1 overflow-y-auto p-4 space-y-2 ">
+      <!-- Messages will appear here -->
+    </div>
+
+    <!-- Input Area -->
+    <div class="flex px-4 py-2 border-t border-gray-300 bg-white">
+      <input id="chat-input" type="text" placeholder="Type a message..."
+        class="flex-1 border rounded-full px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-500" />
+      <button id="chat-send" class="ml-2 bg-indigo-600 text-white px-4 py-2 rounded-full hover:bg-indigo-700">
+        Send
+      </button>
+    </div>
+  </section>
+
+
 
 
   <script src="script.js"></script>
